Freedom Sanbox Ant Deploy/src/objects/Business_Unit_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Unit</label>
        <referenceTo>Business_Unit__c</referenceTo>
        <relationshipLabel>Business Unit Configurations</relationshipLabel>
        <relationshipName>Business_Unit_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Configuration_Tag__c</fullName>
        <label>Configuration Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configuration_Value__c</fullName>
        <label>Configuration Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Business Unit Configuration</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Unit Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>